# GAL2D

./: .gitignore  CMakeLists.txt  README.md
Backend/: CMakeLists.txt
Backend/MSWindows/: CMakeLists.txt
Backend/MSWindows/Source/: GraphicsMSWindows.cpp  GraphicsMSWindows.h
Backend/OpenGL/: CMakeLists.txt
Backend/OpenGL/Source/: GAL2DMakeInterface.cpp  GAL2DMakeInterface.h  GraphicsOpenGL.cpp  GraphicsOpenGL.h  GraphicsWinGL.cpp  GraphicsWinGL.h  TextureOpenGL.cpp  TextureOpenGL.h  TextureWinGL.cpp  TextureWinGL.h
Test/: CMakeLists.txt
Test/Source/: App.cpp  App.h  Main.cpp
